# QiushiHan-CMOR-438

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: README.md
examples/Supervised_Learning/Decision_Trees/: README.md  decision_tree_classifier_demo.ipynb
examples/Supervised_Learning/Ensemble_Methods/: README.md  ensemble_demo.ipynb
examples/Supervised_Learning/K_Nearest_Neighbors/: README.md  knn_demo.ipynb
examples/Supervised_Learning/Linear_Regression/: README.md  linear_regression_demo.ipynb
examples/Supervised_Learning/Logistic_Regression/: README.md  logistic_regression_demo.ipynb
examples/Supervised_Learning/Multilayer_Perceptron/: README.md  mlp_demo.ipynb
examples/Supervised_Learning/Perceptron/: README.md  perceptron_demo.ipynb
examples/Supervised_Learning/Regression_Trees/: README.md  decision_tree_regressor_demo.ipynb
examples/Unsupervised_Learning/Community_Detection/: README.md  label_propagation_demo.ipynb
examples/Unsupervised_Learning/DBSCAN/: README.md  dbscan_demo.ipynb
examples/Unsupervised_Learning/K_Means_Clustering/: README.md  kmeans_demo.ipynb
examples/Unsupervised_Learning/PCA/: README.md  pca_demo.ipynb
src/rice_ml/: README.md
tests/unit/: test_dbscan.py  test_decision_tree_classifier.py  test_decision_tree_regressor.py  test_ensemble.py  test_kmeans.py  test_knn.py  test_label_propagation.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_mlp.py  test_pca.py  test_perceptron.py  test_preprocessing.py
(+14 files in other folders)
